# meshcore

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  MIGRATION_INVENTORY.md  NOTICE  PLAN.md  README.md  UPSTREAM.md
.github/workflows/: ci.yml  upstream-evidence.yml
cmake/: meshcore-config.cmake.in  meshcore_sources.cmake
docs/: porting.md  testing.md  versioning.md
examples/minimal_host/: CMakeLists.txt  example_platform.c  main.c
include/: README.md
include/meshcore/: platform.h  runtime.h  types.h
src/core/: README.md  meshcore_clock.c  meshcore_clock.h  meshcore_dispatcher.c  meshcore_dispatcher.h  meshcore_group_channel.h  meshcore_identity.c  meshcore_identity.h  meshcore_mesh.c  meshcore_mesh.h  meshcore_packet.c  meshcore_packet.h  meshcore_radio.c  meshcore_radio.h  meshcore_rng.c  meshcore_rng.h  meshcore_utils.c  meshcore_utils.h
src/platform/: README.md  meshcore_platform_bridge.c  meshcore_platform_bridge.h
src/runtime/: README.md  meshcore.c  meshcore_runtime_bridge.h  meshcore_runtime_control.c  meshcore_runtime_event_publish.c  meshcore_runtime_internal.h  meshcore_runtime_pending.c  meshcore_runtime_policy.c  meshcore_runtime_publish.c  meshcore_runtime_receive.c  meshcore_runtime_request.c
src/support/: README.md  meshcore_advert_data.c  meshcore_advert_data.h  meshcore_packet_manager.c  meshcore_packet_manager.h  meshcore_tables.c  meshcore_tables.h  meshcore_txt_data.c  meshcore_txt_data.h
src/support/telemetry/: meshcore_cayenne_lpp_compat.c  meshcore_cayenne_lpp_compat.h
tests/native/: CMakeLists.txt  native_test.h  test_fuzz_smoke.c  test_packet_roundtrip.c  test_protocol_parity_vectors.c  test_public_abi.c  test_runtime_api_contract.c  test_runtime_init.c  test_runtime_pending_oracle.c  test_support_parity.c
tests/support/: fake_platform.c  fake_platform.h
tools/: api_surface_report.py  check_source_manifest.py  coverage_report.py  meshcore_sync_report.py  package_smoke.py  parity_coverage_report.py  public_header_smoke.py  upstream_lock_check.py  upstream_oracle.py
zephyr/: module.yml
